documentation and todo fixes

--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:storage": "node test-storage.js"
+    "test:storage": "node test-storage.js",
+    "optimize:production": "node scripts/production-optimization.js",
+    "build:analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
@@ -28,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.32",
