--- a/package.json
+++ b/package.json
@@ -7,10 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:unit": "jest --testPathPattern=__tests__/.*\\.test\\.(ts|tsx)$ --testPathIgnorePattern=integration",
+    "test:integration": "jest --testPathPattern=integration\\.test\\.(ts|tsx)$",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "test:storage": "node test-storage.js",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:admin": "playwright test admin-panel",
+    "test:e2e:contact": "playwright test contact-form",
+    "test:e2e:auth": "playwright test auth",
+    "test:e2e:files": "playwright test file-management",
+    "test:e2e:dashboard": "playwright test dashboard",
+    "test:e2e:ci": "playwright test --reporter=github",
     "optimize:production": "node scripts/production-optimization.js",
     "build:analyze": "ANALYZE=true npm run build"
   },
@@ -24,14 +39,18 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@sendgrid/mail": "^8.1.5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "crypto-js": "^4.2.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -50,6 +69,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -58,12 +78,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.4",
+    "tsc": "^2.0.4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
