--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "generate": "prisma generate",
     "optimize:production": "node scripts/production-optimization.js",
     "build:analyze": "ANALYZE=true npm run build"
   },
